tests/build_debug.txt
/opt/homebrew/Cellar/zig/0.15.1/bin/zig build-exe -ODebug --dep parser --dep shape_checker --dep phantom_semantic_checker --dep tap_collector --dep tap_codegen --dep compiler_requires --dep package_requires --dep emit_build_zig --dep emit_package_files --dep config --dep module_resolver --dep annotation_parser --dep ast --dep errors --dep type_registry --dep keyword_registry --dep ast_serializer --dep ast_transform --dep transforms/inline_small_events --dep compiler_config --dep emitter_helpers --dep visitor_emitter --dep tap_registry --dep tap_transformer --dep canonicalize_names --dep meta_events --dep validate_abstract_impl --dep ast_functional --dep transform_functional --dep transforms/inline_small_events_functional --dep fusion_optimizer.zig --dep transform_collector --dep compiler -Mroot=/Users/larsde/src/koru/src/main.zig -ODebug --dep ast --dep lexer --dep errors --dep type_registry --dep module_resolver --dep expression_parser --dep union_collector --dep union_codegen -Mparser=/Users/larsde/src/koru/src/parser.zig -ODebug --dep ast --dep errors --dep phantom_parser --dep type_inference -Mshape_checker=/Users/larsde/src/koru/src/shape_checker.zig -ODebug --dep ast --dep errors --dep phantom_parser -Mphantom_semantic_checker=/Users/larsde/src/koru/src/phantom_semantic_checker.zig -ODebug --dep ast -Mtap_collector=/Users/larsde/src/koru/src/tap_collector.zig -ODebug --dep ast -Mtap_codegen=/Users/larsde/src/koru/src/tap_codegen.zig -ODebug --dep ast -Mcompiler_requires=/Users/larsde/src/koru/src/compiler_requires.zig -ODebug --dep ast -Mpackage_requires=/Users/larsde/src/koru/src/package_requires.zig -ODebug -Memit_build_zig=/Users/larsde/src/koru/src/emit_build_zig.zig -ODebug -Memit_package_files=/Users/larsde/src/koru/src/emit_package_files.zig -ODebug -Mconfig=/Users/larsde/src/koru/src/config.zig -ODebug --dep config -Mmodule_resolver=/Users/larsde/src/koru/src/module_resolver.zig -ODebug -Mannotation_parser=/Users/larsde/src/koru/src/annotation_parser.zig -ODebug --dep errors -Mast=/Users/larsde/src/koru/src/ast.zig -ODebug -Merrors=/Users/larsde/src/koru/src/errors.zig -ODebug --dep ast -Mtype_registry=/Users/larsde/src/koru/src/type_registry.zig -ODebug -Mkeyword_registry=/Users/larsde/src/koru/src/keyword_registry.zig -ODebug --dep ast --dep parser -Mast_serializer=/Users/larsde/src/koru/src/ast_serializer.zig -ODebug --dep ast -Mast_transform=/Users/larsde/src/koru/src/ast_transform.zig -ODebug --dep ast --dep ast_transform --dep ast_visitor -Mtransforms/inline_small_events=/Users/larsde/src/koru/src/transforms/inline_small_events.zig -ODebug -Mcompiler_config=/Users/larsde/src/koru/src/compiler_config.zig -ODebug --dep ast --dep compiler_config --dep type_registry --dep tap_registry --dep compiler_passes/purity_helpers -Memitter_helpers=/Users/larsde/src/koru/src/emitter_helpers.zig -ODebug --dep ast --dep emitter_helpers --dep ast_visitor --dep type_registry --dep annotation_parser --dep tap_registry -Mvisitor_emitter=/Users/larsde/src/koru/src/visitor_emitter.zig -ODebug --dep ast --dep errors --dep tap_pattern_matcher -Mtap_registry=/Users/larsde/src/koru/src/tap_registry.zig -ODebug --dep ast --dep tap_registry --dep emitter_helpers --dep compiler_passes/purity_helpers -Mtap_transformer=/Users/larsde/src/koru/src/tap_transformer.zig -ODebug --dep ast -Mcanonicalize_names=/Users/larsde/src/koru/src/canonicalize_names.zig -ODebug --dep ast --dep errors -Mmeta_events=/Users/larsde/src/koru/src/meta_events.zig -ODebug --dep ast --dep errors -Mvalidate_abstract_impl=/Users/larsde/src/koru/src/validate_abstract_impl.zig -ODebug --dep ast -Mast_functional=/Users/larsde/src/koru/src/ast_functional.zig -ODebug --dep ast --dep ast_functional -Mtransform_functional=/Users/larsde/src/koru/src/transform_functional.zig -ODebug --dep ast --dep ast_functional --dep transform_functional -Mtransforms/inline_small_events_functional=/Users/larsde/src/koru/src/transforms/inline_small_events_functional.zig -ODebug --dep ast --dep ast_functional --dep fusion_detector.zig -Mfusion_optimizer.zig=/Users/larsde/src/koru/src/fusion_optimizer.zig -ODebug --dep ast --dep ast_functional -Mtransform_collector=/Users/larsde/src/koru/src/transform_collector.zig -ODebug --dep ast -Mcompiler=/Users/larsde/src/koru/src/compiler.zig -ODebug -Mlexer=/Users/larsde/src/koru/src/lexer.zig -ODebug --dep lexer --dep ast -Mexpression_parser=/Users/larsde/src/koru/src/expression_parser.zig -ODebug --dep ast -Munion_collector=/Users/larsde/src/koru/src/union_collector.zig -ODebug --dep ast --dep expression_codegen --dep codegen_utils -Munion_codegen=/Users/larsde/src/koru/src/union_codegen.zig -ODebug -Mphantom_parser=/Users/larsde/src/koru/koru_std/phantom_parser.zig -ODebug --dep ast --dep errors -Mtype_inference=/Users/larsde/src/koru/src/type_inference.zig -ODebug --dep ast --dep ast_transform -Mast_visitor=/Users/larsde/src/koru/src/ast_visitor.zig -ODebug --dep ast --dep lexer -Mcompiler_passes/purity_helpers=/Users/larsde/src/koru/src/compiler_passes/purity_helpers.zig -ODebug -Mtap_pattern_matcher=/Users/larsde/src/koru/src/tap_pattern_matcher.zig -ODebug -Mfusion_detector.zig=/Users/larsde/src/koru/src/fusion_detector.zig -ODebug --dep ast -Mexpression_codegen=/Users/larsde/src/koru/src/expression_codegen.zig -ODebug -Mcodegen_utils=/Users/larsde/src/koru/src/codegen_utils.zig --cache-dir .zig-cache --global-cache-dir /Users/larsde/.cache/zig --name koruc --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.1/lib/zig/ --listen=-
install
+- install koruc
   +- compile exe koruc Debug native 1 errors
src/main.zig:1222:33: error: use of undeclared identifier 'has_item'
                    .has_item = has_item,
                                ^~~~~~~~
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.15.1/bin/zig build-exe -ODebug --dep parser --dep shape_checker --dep phantom_semantic_checker --dep tap_collector --dep tap_codegen --dep compiler_requires --dep package_requires --dep emit_build_zig --dep emit_package_files --dep config --dep module_resolver --dep annotation_parser --dep ast --dep errors --dep type_registry --dep keyword_registry --dep ast_serializer --dep ast_transform --dep transforms/inline_small_events --dep compiler_config --dep emitter_helpers --dep visitor_emitter --dep tap_registry --dep tap_transformer --dep canonicalize_names --dep meta_events --dep validate_abstract_impl --dep ast_functional --dep transform_functional --dep transforms/inline_small_events_functional --dep fusion_optimizer.zig --dep transform_collector --dep compiler -Mroot=/Users/larsde/src/koru/src/main.zig -ODebug --dep ast --dep lexer --dep errors --dep type_registry --dep module_resolver --dep expression_parser --dep union_collector --dep union_codegen -Mparser=/Users/larsde/src/koru/src/parser.zig -ODebug --dep ast --dep errors --dep phantom_parser --dep type_inference -Mshape_checker=/Users/larsde/src/koru/src/shape_checker.zig -ODebug --dep ast --dep errors --dep phantom_parser -Mphantom_semantic_checker=/Users/larsde/src/koru/src/phantom_semantic_checker.zig -ODebug --dep ast -Mtap_collector=/Users/larsde/src/koru/src/tap_collector.zig -ODebug --dep ast -Mtap_codegen=/Users/larsde/src/koru/src/tap_codegen.zig -ODebug --dep ast -Mcompiler_requires=/Users/larsde/src/koru/src/compiler_requires.zig -ODebug --dep ast -Mpackage_requires=/Users/larsde/src/koru/src/package_requires.zig -ODebug -Memit_build_zig=/Users/larsde/src/koru/src/emit_build_zig.zig -ODebug -Memit_package_files=/Users/larsde/src/koru/src/emit_package_files.zig -ODebug -Mconfig=/Users/larsde/src/koru/src/config.zig -ODebug --dep config -Mmodule_resolver=/Users/larsde/src/koru/src/module_resolver.zig -ODebug -Mannotation_parser=/Users/larsde/src/koru/src/annotation_parser.zig -ODebug --dep errors -Mast=/Users/larsde/src/koru/src/ast.zig -ODebug -Merrors=/Users/larsde/src/koru/src/errors.zig -ODebug --dep ast -Mtype_registry=/Users/larsde/src/koru/src/type_registry.zig -ODebug -Mkeyword_registry=/Users/larsde/src/koru/src/keyword_registry.zig -ODebug --dep ast --dep parser -Mast_serializer=/Users/larsde/src/koru/src/ast_serializer.zig -ODebug --dep ast -Mast_transform=/Users/larsde/src/koru/src/ast_transform.zig -ODebug --dep ast --dep ast_transform --dep ast_visitor -Mtransforms/inline_small_events=/Users/larsde/src/koru/src/transforms/inline_small_events.zig -ODebug -Mcompiler_config=/Users/larsde/src/koru/src/compiler_config.zig -ODebug --dep ast --dep compiler_config --dep type_registry --dep tap_registry --dep compiler_passes/purity_helpers -Memitter_helpers=/Users/larsde/src/koru/src/emitter_helpers.zig -ODebug --dep ast --dep emitter_helpers --dep ast_visitor --dep type_registry --dep annotation_parser --dep tap_registry -Mvisitor_emitter=/Users/larsde/src/koru/src/visitor_emitter.zig -ODebug --dep ast --dep errors --dep tap_pattern_matcher -Mtap_registry=/Users/larsde/src/koru/src/tap_registry.zig -ODebug --dep ast --dep tap_registry --dep emitter_helpers --dep compiler_passes/purity_helpers -Mtap_transformer=/Users/larsde/src/koru/src/tap_transformer.zig -ODebug --dep ast -Mcanonicalize_names=/Users/larsde/src/koru/src/canonicalize_names.zig -ODebug --dep ast --dep errors -Mmeta_events=/Users/larsde/src/koru/src/meta_events.zig -ODebug --dep ast --dep errors -Mvalidate_abstract_impl=/Users/larsde/src/koru/src/validate_abstract_impl.zig -ODebug --dep ast -Mast_functional=/Users/larsde/src/koru/src/ast_functional.zig -ODebug --dep ast --dep ast_functional -Mtransform_functional=/Users/larsde/src/koru/src/transform_functional.zig -ODebug --dep ast --dep ast_functional --dep transform_functional -Mtransforms/inline_small_events_functional=/Users/larsde/src/koru/src/transforms/inline_small_events_functional.zig -ODebug --dep ast --dep ast_functional --dep fusion_detector.zig -Mfusion_optimizer.zig=/Users/larsde/src/koru/src/fusion_optimizer.zig -ODebug --dep ast --dep ast_functional -Mtransform_collector=/Users/larsde/src/koru/src/transform_collector.zig -ODebug --dep ast -Mcompiler=/Users/larsde/src/koru/src/compiler.zig -ODebug -Mlexer=/Users/larsde/src/koru/src/lexer.zig -ODebug --dep lexer --dep ast -Mexpression_parser=/Users/larsde/src/koru/src/expression_parser.zig -ODebug --dep ast -Munion_collector=/Users/larsde/src/koru/src/union_collector.zig -ODebug --dep ast --dep expression_codegen --dep codegen_utils -Munion_codegen=/Users/larsde/src/koru/src/union_codegen.zig -ODebug -Mphantom_parser=/Users/larsde/src/koru/koru_std/phantom_parser.zig -ODebug --dep ast --dep errors -Mtype_inference=/Users/larsde/src/koru/src/type_inference.zig -ODebug --dep ast --dep ast_transform -Mast_visitor=/Users/larsde/src/koru/src/ast_visitor.zig -ODebug --dep ast --dep lexer -Mcompiler_passes/purity_helpers=/Users/larsde/src/koru/src/compiler_passes/purity_helpers.zig -ODebug -Mtap_pattern_matcher=/Users/larsde/src/koru/src/tap_pattern_matcher.zig -ODebug -Mfusion_detector.zig=/Users/larsde/src/koru/src/fusion_detector.zig -ODebug --dep ast -Mexpression_codegen=/Users/larsde/src/koru/src/expression_codegen.zig -ODebug -Mcodegen_utils=/Users/larsde/src/koru/src/codegen_utils.zig --cache-dir .zig-cache --global-cache-dir /Users/larsde/.cache/zig --name koruc --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.1/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
install transitive failure
+- install koruc transitive failure
   +- compile exe koruc Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/a5d99967d497caf6c2ecb2395f3f5cdc/build /opt/homebrew/Cellar/zig/0.15.1/bin/zig /opt/homebrew/Cellar/zig/0.15.1/lib/zig /Users/larsde/src/koru .zig-cache /Users/larsde/.cache/zig --seed 0x8c637e3f -Z4ca76050e6429a50 --verbose
